fix globe cropping clock issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ header {
 /****************************************************************/
 /* text clock */
 .container-fluid-textclock {
-  padding: 8% 15% 0.7% 15%;
+  padding: 11% 15% 0.7% 14.5%;
   width: 100%;
   left: 50%;
   top: 50%;
